# indo-asag

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch_fix.py
configs/: base.yaml
data/: README.md  preprocess.py
data/processed/: dataset_master_autoscoring.parquet
notebooks/: 01_exp_1_lexical.ipynb  01_preliminary_study.ipynb  02_exp_2_sbert.ipynb  03_exp_3_indobert.ipynb  04_exp_4_handcrafted.ipynb  05_exp_5_naive_concat.ipynb  06_exp_6_late_fusion.ipynb  07_exp_7_loqo.ipynb  08_report_and_stats.ipynb  demo_interactive.ipynb
notebooks/preliminary/: 00_dataset_analysis.ipynb  01_exp_1_lexical.ipynb  01_exp_1_lexical.py  02_exp_2_sbert.ipynb  02_exp_2_sbert.py  03_exp_3_indobert.ipynb  03_exp_3_indobert.py  04_exp_4_handcrafted.ipynb  04_exp_4_handcrafted.py  05_exp_5_naive_concat.ipynb  05_exp_5_naive_concat.py  06_exp_6_late_fusion.ipynb  06_exp_6_late_fusion.py  07_exp_7_loqo.ipynb  07_exp_7_loqo.py  08_report_and_stats.ipynb  08_report_and_stats.py
results/: README.md
results/models/: hc_svr_best_fold0.pkl  hc_svr_best_fold1.pkl  hc_svr_best_fold2.pkl  hc_svr_best_fold3.pkl  hc_svr_best_fold4.pkl  ridge_latefusion_best_fold0.pkl  ridge_latefusion_best_fold1.pkl  ridge_latefusion_best_fold2.pkl  ridge_latefusion_best_fold3.pkl  ridge_latefusion_best_fold4.pkl
results/prelim/metrics/: loqo_results.csv  loqo_summary.csv  prelim_results.csv
results/prelim/predictions/: exp1_lexical_oof_seed1024.npy  exp1_lexical_oof_seed123.npy  exp1_lexical_oof_seed42.npy  exp1_lexical_oof_seed456.npy  exp1_lexical_oof_seed789.npy  (+23 more)
src/indo_asag/: __init__.py
(+15 files in other folders)
