[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indo-asag"
version = "0.1.0"
description = "Indonesian Automated Short Answer Grading via Late Fusion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Rijal"}]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "pyarrow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "shap>=0.42",
]
nlp = [
    "Sastrawi>=1.0",
]
all = ["indo-asag[deep,viz,nlp]"]

[tool.setuptools.packages.find]
where = ["src"]
